Fixed z-indexes on pin overlay interactions.

--- a/Clones/Pinterest-Home/pinterest.scss
+++ b/Clones/Pinterest-Home/pinterest.scss
@@ -786,14 +786,12 @@ nav {
   .pin-overlay {
     position: absolute;
     top: 0;
-    z-index: 1;
     width: 100%;
     height: 100%;
     border-radius: 20px;
 
     .pin-overlay-elements {
       display: none;
-      z-index: 1;
     }
 
     .pin-overlay-bg {
@@ -883,10 +881,5 @@ nav {
       padding: 8px;
       @extend %hover-white;
     }
-  }
-
-  // figure out z-indexes
-  .dropdown-content {
-    z-index: 3;
   }
 }
